--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 /.project
 /.loadpath
-/config/additional_environment.rb
 /config/configuration.yml
-/config/database.yml
 /config/email.yml
 /config/initializers/session_store.rb
 /coverage
@@ -28,3 +26,9 @@
 /Gemfile.lock
 /Gemfile.local
 
+# configurations
+/config/additional_environment.rb
+/config/database.yml
+/config/unicorn.rb
+/Capfile
+/config/deploy.rb
